Update workflows after split-up.
... or try to anyway.

part of CURA-8824

--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -38,7 +38,8 @@ on:
     push:
         paths:
             # FIXME: check the paths for this specific repo
-            - 'src/**'
+            - 'python/**'
+            - 'include/**'
             - 'test_package/**'
             - 'cmake/**'
             - 'conanfile.py'
