--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -13,7 +13,7 @@ on:
             conan_id:
                 required: false
                 type: string
-                description: 'The full conan package ID, e.g. "libnest2d/1.2.3@ultimaker/stable"'
+                description: 'The full conan package ID, e.g. "pyarcus/1.2.3@ultimaker/stable"'
             create_latest_alias:
                 required: true
                 default: false
