--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_policy(SET CMP0091 NEW)
 project(pyarcus)
 cmake_minimum_required(VERSION 3.20)
 include(cmake/StandardProjectSettings.cmake)
-include(cmake/SIPMacros.cmake)
+include(${CMAKE_BINARY_DIR}/cmake/SIPMacros.cmake)
 
 find_package(protobuf 3.17.1 REQUIRED)
 find_package(cpython REQUIRED)
