--- a/conandata.yml
+++ b/conandata.yml
@@ -1,7 +1,19 @@
-"5.2.0-alpha":
+"5.3.0-alpha":
     requirements:
         - "protobuf/3.21.4"
         - "arcus/(latest)@ultimaker/testing"
+        - "cpython/3.10.4"
+        - "zlib/1.2.12"
+"5.2.0-beta.1":
+    requirements:
+        - "protobuf/3.21.4"
+        - "arcus/5.2.0-beta.1"
+        - "cpython/3.10.4"
+        - "zlib/1.2.12"
+"5.2.0":
+    requirements:
+        - "protobuf/3.21.4"
+        - "arcus/5.2.0"
         - "cpython/3.10.4"
         - "zlib/1.2.12"
 
