--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -80,6 +80,8 @@ jobs:
 
         uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
         with:
+            project_name: pyarcus
+            build_id: 3
             recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
             runs_on: 'macos-11'
             python_version: '3.10.x'
@@ -92,6 +94,8 @@ jobs:
 
         uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
         with:
+            project_name: pyarcus
+            build_id: 4
             recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
             runs_on: 'windows-2022'
             python_version: '3.10.x'
@@ -105,8 +109,24 @@ jobs:
 
         uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
         with:
+            project_name: pyarcus
+            build_id: 2
             recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
             runs_on: 'ubuntu-20.04'
+            python_version: '3.10.x'
+            conan_logging_level: 'info'
+        secrets: inherit
+
+    conan-package-create-linux-modern:
+        if: ${{ (github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'master' || needs.conan-recipe-version.outputs.is_release_branch)) || (github.event_name == 'workflow_dispatch' && inputs.create_binaries_linux) }}
+        needs: [ conan-recipe-version, conan-package-export ]
+
+        uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
+        with:
+            project_name: pyarcus
+            build_id: 1
+            recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
+            runs_on: 'ubuntu-22.04'
             python_version: '3.10.x'
             conan_logging_level: 'info'
         secrets: inherit
@@ -126,7 +146,7 @@ jobs:
 
     notify-create:
         if: ${{ always() && ((github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'master' || needs.conan-recipe-version.outputs.is_release_branch)) || (github.event_name == 'workflow_dispatch' && inputs.create_binaries_linux)) }}
-        needs: [ conan-recipe-version, conan-package-create-macos, conan-package-create-windows, conan-package-create-linux ]
+        needs: [ conan-recipe-version, conan-package-create-macos, conan-package-create-windows, conan-package-create-linux, conan-package-create-linux-modern ]
 
         uses: ultimaker/cura/.github/workflows/notify.yml@main
         with:
