--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -73,6 +73,21 @@ jobs:
             python_version: '3.11.x'
             conan_logging_level: 'info'
         secrets: inherit
+        
+    conan-package-create-windows:
+        if: ${{ (github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'master' || needs.conan-recipe-version.outputs.is_release_branch)) || (github.event_name == 'workflow_dispatch' && inputs.create_binaries_windows) }}
+        needs: [ conan-recipe-version, conan-package-export ]
+
+        uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
+        with:
+            project_name: ${{ needs.conan-recipe-version.outputs.project_name }}
+            recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
+            build_id: 4
+            runs_on: 'windows-2022'
+            python_version: '3.11.x'
+            conan_config_branch: ''
+            conan_logging_level: 'info'
+        secrets: inherit
 
     conan-package-create-macos:
         if: ${{ (github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'master' || needs.conan-recipe-version.outputs.is_release_branch)) || (github.event_name == 'workflow_dispatch' && inputs.create_binaries_macos) }}
@@ -80,26 +95,25 @@ jobs:
 
         uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
         with:
-            project_name: pyarcus
-            build_id: 3
+            project_name: ${{ needs.conan-recipe-version.outputs.project_name }}
             recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
+            build_id: 3
             runs_on: 'macos-11'
             python_version: '3.11.x'
             conan_logging_level: 'info'
         secrets: inherit
-
-    conan-package-create-windows:
-        if: ${{ (github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'master' || needs.conan-recipe-version.outputs.is_release_branch)) || (github.event_name == 'workflow_dispatch' && inputs.create_binaries_windows) }}
+        
+    conan-package-create-linux-modern:
+        if: ${{ (github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'master' || needs.conan-recipe-version.outputs.is_release_branch)) || (github.event_name == 'workflow_dispatch' && inputs.create_binaries_linux) }}
         needs: [ conan-recipe-version, conan-package-export ]
 
         uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
         with:
-            project_name: pyarcus
-            build_id: 4
+            project_name: ${{ needs.conan-recipe-version.outputs.project_name }}
             recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
-            runs_on: 'windows-2022'
+            build_id: 2
+            runs_on: 'ubuntu-22.04'
             python_version: '3.11.x'
-            conan_config_branch: ''
             conan_logging_level: 'info'
         secrets: inherit
 
@@ -109,24 +123,10 @@ jobs:
 
         uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
         with:
-            project_name: pyarcus
-            build_id: 2
+            project_name: ${{ needs.conan-recipe-version.outputs.project_name }}
             recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
-            runs_on: 'ubuntu-20.04'
-            python_version: '3.11.x'
-            conan_logging_level: 'info'
-        secrets: inherit
-
-    conan-package-create-linux-modern:
-        if: ${{ (github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'master' || needs.conan-recipe-version.outputs.is_release_branch)) || (github.event_name == 'workflow_dispatch' && inputs.create_binaries_linux) }}
-        needs: [ conan-recipe-version, conan-package-export ]
-
-        uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
-        with:
-            project_name: pyarcus
             build_id: 1
-            recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
-            runs_on: 'ubuntu-22.04'
+            runs_on: 'ubuntu-20.04'
             python_version: '3.11.x'
             conan_logging_level: 'info'
         secrets: inherit
