--- a/conandata.yml
+++ b/conandata.yml
@@ -4,16 +4,10 @@
         - "arcus/(latest)@ultimaker/testing"
         - "cpython/3.10.4"
         - "zlib/1.2.12"
-"5.2.0-beta.2":
+"5.2.2":
     requirements:
         - "protobuf/3.21.4"
-        - "arcus/(latest)@ultimaker/stable"
-        - "cpython/3.10.4"
-        - "zlib/1.2.12"
-"5.2.0-beta.1":
-    requirements:
-        - "protobuf/3.21.4"
-        - "arcus/5.2.0-beta.1"
+        - "arcus/5.2.2"
         - "cpython/3.10.4"
         - "zlib/1.2.12"
 "5.2.0":
