--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,23 @@
 cmake_policy(SET CMP0091 NEW)
-project(pyarcus)
+project(pyarcusle)
 cmake_minimum_required(VERSION 3.20)
 
 find_package(protobuf REQUIRED)
 find_package(cpython REQUIRED)
-find_package(arcus REQUIRED)
+find_package(arcusle REQUIRED)
 
 find_package(standardprojectsettings REQUIRED)
 find_package(sipbuildtool REQUIRED)
 
-add_library(pyArcus INTERFACE src/PythonMessage.cpp)
-use_threads(pyArcus)
+add_library(pyArcusLE INTERFACE src/PythonMessage.cpp)
+use_threads(pyArcusLE)
 
-target_include_directories(pyArcus
+target_include_directories(pyArcusLE
         INTERFACE
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
         )
-target_link_libraries(pyArcus INTERFACE arcus::arcus protobuf::libprotobuf cpython::cpython)
-add_sip_module(pyArcus)
-install_sip_module(pyArcus)
+target_link_libraries(pyArcusLE INTERFACE arcusle::arcusle protobuf::libprotobuf cpython::cpython)
+add_sip_module(pyArcusLE)
+install_sip_module(pyArcusLE)
 
