I think I've got it more or less working now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,15 @@ find_package(arcusle REQUIRED)
 find_package(standardprojectsettings REQUIRED)
 find_package(sipbuildtool REQUIRED)
 
-add_library(pyArcusLE INTERFACE src/PythonMessage.cpp)
-use_threads(pyArcusLE)
+add_library(pyArcus INTERFACE src/PythonMessage.cpp)
+use_threads(pyArcus)
 
-target_include_directories(pyArcusLE
+target_include_directories(pyArcus
         INTERFACE
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
         )
-target_link_libraries(pyArcusLE INTERFACE arcusle::arcusle protobuf::libprotobuf cpython::cpython)
-add_sip_module(pyArcusLE)
-install_sip_module(pyArcusLE)
+target_link_libraries(pyArcus INTERFACE arcusle::arcusle protobuf::libprotobuf cpython::cpython)
+add_sip_module(pyArcus)
+install_sip_module(pyArcus)
 
