--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -20,33 +20,8 @@ on:
       - '[0-9].[0-9][0-9]*'
 
 jobs:
-  # FIXME: Use main once merged
-  conan-recipe-version:
-    uses: ultimaker/cura-workflows/.github/workflows/conan-recipe-version.yml@CURA-11622_conan_v2
+# FIXME: Use main once merged
+  conan-package:
+    uses: ultimaker/cura-workflows/.github/workflows/conan-package.yml@CURA-11622_conan_v2
     with:
       project_name: pyarcus
-
-  # FIXME: Use main once merged
-  conan-recipe-export:
-    needs: [ conan-recipe-version ]
-    uses: ultimaker/cura-workflows/.github/workflows/conan-recipe-export.yml@CURA-11622_conan_v2
-    with:
-      recipe_id_name: ${{ needs.conan-recipe-version.outputs.project_name }}
-      recipe_id_version: ${{ needs.conan-recipe-version.outputs.recipe_semver_full }}
-      recipe_id_user: ${{ needs.conan-recipe-version.outputs.user }}
-      recipe_id_channel: ${{ needs.conan-recipe-version.outputs.channel }}
-      recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
-    secrets: inherit
-
-  # FIXME: Use main once merged
-  conan-package-create:
-    needs: [ conan-recipe-version, conan-recipe-export ]
-    #if: ${{ (github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'master' || needs.conan-recipe-version.outputs.is_release_branch == 'true')) }}
-    uses: ultimaker/cura-workflows/.github/workflows/conan-package-create.yml@CURA-11622_conan_v2
-    with:
-      recipe_id_name: ${{ needs.conan-recipe-version.outputs.project_name }}
-      recipe_id_version: ${{ needs.conan-recipe-version.outputs.recipe_semver_full }}
-      recipe_id_user: ${{ needs.conan-recipe-version.outputs.user }}
-      recipe_id_channel: ${{ needs.conan-recipe-version.outputs.channel }}
-      recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
-    secrets: inherit
