Give secrets to called workflows

--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -25,3 +25,4 @@ jobs:
     uses: ultimaker/cura-workflows/.github/workflows/conan-package.yml@CURA-11622_conan_v2
     with:
       project_name: pyarcus
+    secrets: inherit
