--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -24,5 +24,5 @@ jobs:
   conan-package:
     uses: ultimaker/cura-workflows/.github/workflows/conan-package.yml@CURA-11622_conan_v2
     with:
-      project_name: pyarcus
+      package_name: pyarcus
     secrets: inherit
